as a supervisor I can see a small notification with the number of the pending teachers

--- a/app/assets/stylesheets/default.css
+++ b/app/assets/stylesheets/default.css
@@ -1118,7 +1118,7 @@ display: block;
 
 .dashboard ul.menu {
   list-style: none;
-  min-height: 300px;
+/*  min-height: 300px;*/
   margin: 0;
   background-color: #eaeaea;
   -moz-border-radius: 4px;
