--- a/app/views/supervisor/shared/_admin_menu.html.erb
+++ b/app/views/supervisor/shared/_admin_menu.html.erb
@@ -3,8 +3,7 @@
   <%= tab.dashboard t('.dashboard'), supervisor_dashboard_path %>
   <%= tab.configuration t('.configuration'), edit_supervisor_network_path %>
   <%= tab.courses t('.courses'), courses_path %>
-  <%= tab.teachers t('.teachers'), supervisor_teachers_path %>
+  <%= teachers_notification_tab(@pending_teachers_total, tab) %>
   <%= tab.students t('.students'), supervisor_students_path %>
-  <%= tab.pending_approvals t('.pending_approvals'), supervisor_pending_approvals_path %>
   <li><%= link_to(t('.reports'), "#") %></li>
 <% end %>
