notifications now have links that look different from the notification itself

--- a/app/assets/stylesheets/default.css
+++ b/app/assets/stylesheets/default.css
@@ -1094,6 +1094,11 @@ display: block;
   margin: 0 0 2px 10px;
 }
 
+.notification a.notification-link{
+  font-size: 10px;
+  color: #117487;
+}
+
 /* Admin Dashboard Classes */
 
 .dashboard {
