--- a/app/views/notifications/student_survey_added.erb
+++ b/app/views/notifications/student_survey_added.erb
@@ -1,3 +1,3 @@
 <%= I18n.t 'notifications.survey_added'%> <a href="<%= survey_path(survey) %>"><%= survey.name %></a> 
 <%= I18n.t 'notifications.for_the_course'%> <a href="<%= course_path(course) %>"><%= course.name %></a>.
-<a href="<%= survey_path(survey) %>"><%= I18n.t('notifications.show_survey') %> &gt;&gt;</a>.
+<a href="<%= survey_path(survey) %>"  class="notification-link"><%= I18n.t('notifications.show_survey') %> &gt;&gt;</a>
