--- a/app/views/notifications/student_assignment_updated.erb
+++ b/app/views/notifications/student_assignment_updated.erb
@@ -1,3 +1,3 @@
 <%= I18n.t 'notifications.assignment_updated'%> <a href="<%= assignment_path(assignment) %>"><%= assignment.name %></a> 
 <%= I18n.t 'notifications.for_the_course'%> <a href="<%= course_path(course) %>"><%= course.name %></a>.
-<a href="<%= assignment_path(assignment) %>"><%= I18n.t('notifications.show_assignment') %> &gt;&gt;</a>.
+<a href="<%= assignment_path(assignment) %>"  class="notification-link"><%= I18n.t('notifications.show_assignment') %> &gt;&gt;</a>
