--- a/app/views/notifications/student_course_enrollment.erb
+++ b/app/views/notifications/student_course_enrollment.erb
@@ -6,4 +6,4 @@
 
 <a href="<%= user_path(student) %>"><%= student.name %></a> <%= I18n.t('notifications.wants_to_participate_in_course') %>
 <a href="<%= course_path(course) %>"><%= course.name %></a>.
-<a href="<%= members_for_course_path(course) %>"><%= I18n.t('notifications.show_requests') %> &gt;&gt;</a>.
+<a href="<%= members_for_course_path(course) %>"  class="notification-link"><%= I18n.t('notifications.show_requests') %> &gt;&gt;</a>
