--- a/app/views/notifications/teacher_survey_updated.erb
+++ b/app/views/notifications/teacher_survey_updated.erb
@@ -7,4 +7,4 @@
 <a href="<%= user_path(student) %>"><%= student.name %></a> <%= I18n.t('notifications.has_updated_survey_answers') %>
 <a href="<%= survey_path(survey) %>"><%= survey.name %></a> <%= I18n.t('notifications.for_the_course') %> 
 <a href="<%= course_path(course) %>"><%= course.name %></a>.
-<a href="<%= reply_path(survey_reply) %>"><%= I18n.t('notifications.show_survey_reply') %> &gt;&gt;</a>.
+<a href="<%= reply_path(survey_reply) %>"  class="notification-link"><%= I18n.t('notifications.show_survey_reply') %> &gt;&gt;</a>
