--- a/app/assets/javascripts/lib/wysiwyg/stylesheets/jquery.wysiwyg.css
+++ b/app/assets/javascripts/lib/wysiwyg/stylesheets/jquery.wysiwyg.css
@@ -1,4 +1,4 @@
-div.wysiwyg { padding: 5px; background: #fff }
+div.wysiwyg { display: inline-block; padding: 5px; background: #fff }
 div.wysiwyg * { margin: 0; padding: 0; }
 
 div.wysiwyg ul.toolbar li.jwysiwyg-custom-command { overflow: hidden; }
@@ -69,7 +69,7 @@ div.wysiwyg ul.toolbar li.cssWrap { background-position: -80px -96px; }
 
 div.wysiwyg-dialogRow { float:left; width:100%; font-size: 16px; }
 
-div.wysiwyg iframe { border: 1px solid #999; clear: left;
+div.wysiwyg iframe { border: 1px solid #808080; clear: left;
 -moz-box-shadow    :inset 0 0 10px rgba(0, 0, 0, 0.4);
 -webkit-box-shadow :inset 0 0 10px rgba(0, 0, 0, 0.4);
 box-shadow         :inset 0 0 10px rgba(0, 0, 0, 0.4);
