--- a/app/views/registrations/new.html.erb
+++ b/app/views/registrations/new.html.erb
@@ -8,7 +8,16 @@
 <div class="container">
   <div class="row">
     <div class="span11">
-      <p>Creamos <b>Redes Sociales</b> especialmente <b>diseñadas</b> para el <b>aprendizaje en línea.</b></p>
+      <%- if @network %>
+        <div class="network-info">
+          <%= image_tag(@network.logo_file.large.url) %>
+          <h1><%= @network.slogan %></h1>
+          <h3><%= @network.welcome_message %></h3>
+        </div>
+      <% else %>
+        <p>Creamos <b>Redes Sociales</b> especialmente <b>diseñadas</b> para el <b>aprendizaje en línea.</b></p>
+        <p>Some random test to put on the site</p>
+      <% end %>
     </div>
     <div class="span5">
       <%= render :partial => 'form', :locals => {:resource => resource, :resource_name => resource_name, :url => registration_path(resource_name)} %>
