a small change in the copy@

--- a/app/views/devise/mailer/confirmation_instructions.html.erb
+++ b/app/views/devise/mailer/confirmation_instructions.html.erb
@@ -16,7 +16,7 @@
   </p>
 <%elsif @resource.teacher?%>
   <p>
-  El proceso para tu acceso al sistema consta de 2 pasos, tu correo debe de ser confirmado y tu cuenta debe de ser aprobada por el administrador de tu red.
+  El proceso para tu acceso al sistema como maestro consta de 2 pasos, tu correo debe de ser confirmado y tu cuenta debe de ser aprobada por el administrador de tu red.
   <br />
   Una vez que tu cuenta este confirmada y aprobada podrás disfrutar de Cúrsame y todas las herramientas que te ofrece como:
   <ul>
