--- a/app/views/surveys/_answer_fields.html.erb
+++ b/app/views/surveys/_answer_fields.html.erb
@@ -2,17 +2,17 @@
   <legend><%= t('.legend') %></legend>
   <%- form.object.answers.build %>
   <%= form.semantic_fields_for :answers do |answer| %>
-  <h3><%= t('surveys.survey.select_correct_answer') %></h3>
+  <h5><%= t('surveys.survey.select_correct_answer') %></h5>
     <%- record = answer.object %>
-    <fieldset class="<%= record.new_record? ? :new : nil %> associated answer">
+    <fieldset class="<%= record.new_record? ? :new : nil %> associated answer sortableAnswer" rel="drag_tip" title="<%= t('surveys.drag') %>">
       <ol>
         <li>
           <%= form.radio_button :answer_uuid, record.uuid, :class => 'answer-uuid' %>
         </li>
         <%= answer.input :uuid, :input_html => {:class => 'answer-uuid'}, :as => :hidden %>
         <%= answer.input :position, :input_html => {:class => 'answer-position'}, :as => :hidden %>
-        <%= answer.input :text, :as => :text, :input_html => {:placeholder => t('activerecord.attributes.answer.text'), :class => "span5", :rows => 3} %>
-        <li class="dragable"><span class="drag" rel="drag_tip" title="<%= t('surveys.drag') %>"><%= t('surveys.drag') %></span></li>
+        <%= answer.input :text, :as => :text, :input_html => {:placeholder => t('activerecord.attributes.answer.text'), :class => "span6", :rows => 3} %>
+       <!-- <li class="dragable"><span class="drag" rel="drag_tip" title="<%= t('surveys.drag') %>"><%= t('surveys.drag') %></span></li>-->
         <%= answer.input :_destroy, :as => :boolean %>
       </ol>
     </fieldset>
