--- a/app/views/devise/mailer/confirmation_instructions.html.erb
+++ b/app/views/devise/mailer/confirmation_instructions.html.erb
@@ -1,37 +1,17 @@
-<p>Bienvenido <%= @resource.first_name %>!</p>
+<p>Hola <%= @resource.first_name %>!</p>
 
-<% if @resource.student?%>
-  <p>
-  A partir de ahora, puedes disfrutar de Cúrsame y todas las herramientas que te ofrece como:
-  <ul>
-    <li>Perfil en tu red social privada</li>
-    <li>Interactuar con tus compañeros y maestros</li>
-    <li>Acceso a cursos</li>
-    <li>Tareas</li>
-    <li>Cuestionarios</li>
-    <li>Discusiones</li>
-    <li>Compartir archivos</li>
-    <li>¡Entre muchas otras!</li>
-  </ul>
-  </p>
-<%elsif @resource.teacher?%>
-  <p>
-  El proceso para tu acceso al sistema como maestro consta de 2 pasos, tu correo debe de ser confirmado y tu cuenta debe de ser aprobada por el administrador de tu red.
-  <br />
-  Una vez que tu cuenta este confirmada y aprobada podrás disfrutar de Cúrsame y todas las herramientas que te ofrece como:
-  <ul>
-    <li>Perfil en tu red social privada</li>
-    <li>Interactuar con tus compañeros y alumnos</li>
-    <li>Acceso a cursos</li>
-    <li>Tareas</li>
-    <li>Cuestionarios</li>
-    <li>Discusiones</li>
-    <li>Compartir archivos</li>
-    <li>¡Entre muchas otras!</li>
-  </ul>
-  </p>
-<%end%>
+<p>
+Como te hicimos saber hace unos d&iacute;as, Cúrsame se ha actualizado para ofrecerte mejores herramientas y experiencia.
+<br />
+Por el mismo motivo te pedimos que crees una nueva contraseña para acceder a la nueva plataforma.
+<br />
+<br />
+¡Esperamos disfrutes del nuevo sistema y te invitamos a empezar tus cursos!
+</p>
+<p>
+Para poder ingresar será necesario que <%= link_to 'actualices tu contraseña', edit_password_url(@resource, :reset_password_token => @resource.reset_password_token, :subdomain => @resource.networks.first.subdomain) %>.
+</p>
+<p>
+Cualquier duda, siempre puedes contactarnos al mail <%= link_to 'hola@cursa.me', 'mailto:hola@cursa.me' %>.
+</p>
 
-<p>Es necesario <%= link_to 'confirmar tu cuenta', confirmation_url(@resource, :confirmation_token => @resource.confirmation_token, :subdomain => @resource.networks.first.subdomain) %> para poder accesar al sistema.</p>
-
-<p>Si tienes alguna duda, puedes escribirnos a <%= link_to 'hola@cursa.me', 'mailto:hola@cursa.me' %>.</p>
