fixed copys on mails

--- a/app/views/devise/mailer/reset_password_instructions.html.erb
+++ b/app/views/devise/mailer/reset_password_instructions.html.erb
@@ -1,8 +1,8 @@
-<p>Hola <%= @resource.email %>!</p>
+<p>Hola <%= @resource.first_name %>!</p>
 
 <p>Has solicitado reestablecer tu contraseña y puedes hacerlo por medio del link que aparece en este correo.</p>
 <%begin%>
-<%subdomain = @resource.networks.first.subdomain%>
+<%subdomain = %>
 <%rescue%>
 <%subdomain = nil%>
 <%end%>
