fixed bug on the view

--- a/app/views/devise/mailer/reset_password_instructions.html.erb
+++ b/app/views/devise/mailer/reset_password_instructions.html.erb
@@ -2,7 +2,7 @@
 
 <p>Has solicitado reestablecer tu contraseña y puedes hacerlo por medio del link que aparece en este correo.</p>
 <%begin%>
-<%subdomain = %>
+<%subdomain = @resource.networks.first.subdomain%>
 <%rescue%>
 <%subdomain = nil%>
 <%end%>
