email to the students when a new homework is created

--- a/app/views/student_mailer/accepted_on_course.html.erb
+++ b/app/views/student_mailer/accepted_on_course.html.erb
@@ -5,6 +5,6 @@
 El profesor <%= "#{@teacher.first_name} #{@teacher.last_name}"%> ha aprobado tu ingreso al curso <%= @course.name%>!
 </p>
 <p>
-Visita la p&acute;gina del <%= link_to 'curso', course_path(@course, :subdomain => @subdomain) %> 
+Visita la p&acute;gina del <%= link_to 'curso', course_url(@course, :subdomain => @subdomain) %> 
 </p>
 
