Fixed accents on mailers views. Config mailer sender mail and name

--- a/app/views/student_mailer/accepted_on_course.html.erb
+++ b/app/views/student_mailer/accepted_on_course.html.erb
@@ -5,6 +5,6 @@
 Tu profesor ha aprobado tu ingreso al curso <%= @course.name%>!
 </p>
 <p>
-Visita la p&acute;gina del <%= link_to 'curso', course_url(@course, :subdomain => @subdomain) %> 
+Visita la p&aacute;gina del <%= link_to 'curso', course_url(@course, :subdomain => @subdomain) %> 
 </p>
 
