--- a/app/views/supervisor_mailer/new_teacher_registered.html.erb
+++ b/app/views/supervisor_mailer/new_teacher_registered.html.erb
@@ -5,6 +5,6 @@ Hola!
 El maestro <%= @teacher.name%> ha solicitado ingresar a la red <%= @network.name%> en la cual tu eres Administrador, es necesario que lo apruebes para que tenga acceso a la red.
 </p>
 <p>
-Visita la p&acute;gina de <%= link_to "administraci&oacute;n de maestros", supervisor_teachers_url(:subdomain => @network.subdomain) %> para aceptar o rechazar al maestro.
+Visita la p&aacute;gina de <%= link_to "administración de maestros", supervisor_teachers_url(:subdomain => @network.subdomain) %> para aceptar o rechazar al maestro.
 </p>
 
