--- a/app/views/user_mailer/new_comment_on_discussion.html.erb
+++ b/app/views/user_mailer/new_comment_on_discussion.html.erb
@@ -5,5 +5,5 @@
   ¡El usuario <%= @commenter.name%> ha publicado un nuevo comentario en la discusión <%= @discussion.title%>!
 </p>
 <p>
-  Visita la <%= link_to 'discusi&oacute;n', discussion_url(@discussion, :subdomain=>@subdomain) %> para ver el comentario.
+  Visita la <%= link_to 'discusión', discussion_url(@discussion, :subdomain=>@subdomain) %> para ver el comentario.
 </p>
