--- a/app/views/teacher_mailer/pending_student_on_course.html.erb
+++ b/app/views/teacher_mailer/pending_student_on_course.html.erb
@@ -5,6 +5,6 @@ Hola!
 El alumno <%= @student.name%> ha solicitado ingresar a tu curso <%= @course.name%>, es necesario que lo apruebes para que tenga acceso a el.
 </p>
 <p>
-Visita la p&acute;gina de <%= link_to 'miembros', members_for_course_url(@course, :subdomain => @subdomain) %> de tu curso para aceptar o rechazar al alumno.
+Visita la p&aacute;gina de <%= link_to 'miembros', members_for_course_url(@course, :subdomain => @subdomain) %> de tu curso para aceptar o rechazar al alumno.
 </p>
 
