--- a/app/views/student_mailer/new_homework.html.erb
+++ b/app/views/student_mailer/new_homework.html.erb
@@ -1,10 +1,5 @@
-<p>
-Hola!
-</p>
-<p>
-Tu profesor del curso <%= @course.name%> ha publicado una nueva tarea!
-</p>
-<p>
-Visita la p&aacute;gina de <%= link_to 'tareas', course_assignments_url(@course, :subdomain => @subdomain) %> de tu curso para revisar los detalles.
-</p>
-
+<h2 class="h2">Hola!</h2>
+<h3 class="h3">¡Tienes una nueva notificación!</h3><br>
+<strong>Tu profesor del curso <%= @course.name%> ha publicado una nueva tarea!</strong>
+<br>
+<h1> <%= link_to 'Ver Tareas >>', course_assignments_url(@course, :subdomain => @subdomain) %></h1>
