--- a/app/views/supervisor_mailer/new_teacher_registered.html.erb
+++ b/app/views/supervisor_mailer/new_teacher_registered.html.erb
@@ -1,10 +1,5 @@
-<p>
-Hola!
-</p>
-<p>
-El maestro <%= @teacher.name%> ha solicitado ingresar a la red <%= @network.name%> en la cual tu eres Administrador, es necesario que lo apruebes para que tenga acceso a la red.
-</p>
-<p>
-Visita la p&aacute;gina de <%= link_to "administración de maestros", supervisor_teachers_url(:subdomain => @network.subdomain) %> para aceptar o rechazar al maestro.
-</p>
-
+<h2 class="h2">Hola!</h2>
+<h3 class="h3">¡Tienes una nueva notificación!</h3><br>
+<strong>El maestro <%= @teacher.name%> ha solicitado ingresar a la red <%= @network.name%> en la cual tu eres Administrador, es necesario que lo apruebes para que tenga acceso a la red.</strong>
+<br>
+<h1> <%= link_to "Ir a Administración de Maestros >>", supervisor_teachers_url(:subdomain => @network.subdomain) %></h1>
