--- a/app/views/teacher_mailer/pending_student_on_course.html.erb
+++ b/app/views/teacher_mailer/pending_student_on_course.html.erb
@@ -1,10 +1,5 @@
-<p>
-Hola!
-</p>
-<p>
-El alumno <%= @student.name%> ha solicitado ingresar a tu curso <%= @course.name%>, es necesario que lo apruebes para que tenga acceso a el.
-</p>
-<p>
-Visita la p&aacute;gina de <%= link_to 'miembros', members_for_course_url(@course, :subdomain => @subdomain) %> de tu curso para aceptar o rechazar al alumno.
-</p>
-
+<h2 class="h2">Hola!</h2>
+<h3 class="h3">¡Tienes una nueva notificación!</h3><br>
+<strong>El alumno <%= @student.name%> ha solicitado ingresar a tu curso <%= @course.name%>, es necesario que lo apruebes para que tenga acceso a el.</strong>
+<br>
+<h1> <%= link_to 'Ver Miembros del curso >>', members_for_course_url(@course, :subdomain => @subdomain) %></h1>
