--- a/app/views/devise/mailer/confirmation_instructions.html.erb
+++ b/app/views/devise/mailer/confirmation_instructions.html.erb
@@ -1,8 +1,6 @@
-<p>Bienvenido <%= @resource.first_name %>!</p>
-
+<h2 class="h2">Bienvenido <%= @resource.first_name %>!</h2>
 <% if @resource.student?%>
-  <p>
-  A partir de ahora, puedes disfrutar de Cúrsame y todas las herramientas que te ofrece como:
+<strong>A partir de ahora, puedes disfrutar de Cúrsame y todas las herramientas que te ofrece como:</strong>
   <ul>
     <li>Perfil en tu red social privada</li>
     <li>Interactuar con tus compañeros y maestros</li>
@@ -13,12 +11,12 @@
     <li>Compartir archivos</li>
     <li>¡Entre muchas otras!</li>
   </ul>
-  </p>
 <%elsif @resource.teacher?%>
-  <p>
+<strong>
   El proceso para tu acceso al sistema como maestro consta de 2 pasos, tu correo debe de ser confirmado y tu cuenta debe de ser aprobada por el administrador de tu red.
   <br />
   Una vez que tu cuenta este confirmada y aprobada podrás disfrutar de Cúrsame y todas las herramientas que te ofrece como:
+</strong>
   <ul>
     <li>Perfil en tu red social privada</li>
     <li>Interactuar con tus compañeros y alumnos</li>
@@ -29,13 +27,11 @@
     <li>Compartir archivos</li>
     <li>¡Entre muchas otras!</li>
   </ul>
-  </p>
 <%end%>
 <%begin%>
 <%subdomain = @resource.networks.first.subdomain%>
 <%rescue%>
 <%subdomain = nil%>
 <%end%>
-<p>Es necesario <%= link_to 'confirmar tu cuenta', confirmation_url(@resource, :confirmation_token => @resource.confirmation_token, :subdomain => subdomain) %> para poder accesar al sistema.</p>
-
+<h1> <%= link_to 'Confirmar tu Cuenta >>', confirmation_url(@resource, :confirmation_token => @resource.confirmation_token, :subdomain => subdomain) %></h1>
 <p>Si tienes alguna duda, puedes escribirnos a <%= link_to 'hola@cursa.me', 'mailto:hola@cursa.me' %>.</p>
