--- a/app/views/layouts/mailer.html.erb
+++ b/app/views/layouts/mailer.html.erb
@@ -381,7 +381,7 @@
                                                     <tr>
                                                     	<td class="leftHeaderContent">
                                                             <div mc:edit="header_content_left">
-                                                            	<img src="https://<%= HOST%>/images/header-notification.jpg" style="max-width:610px;" id="headerImage campaign-icon" mc:label="header_image" mc:edit="header_image" mc:allowtext />
+                                                            	<img src="https://<%= HOST.chomp('.com').chomp('.me')%>.heroku.com/assets/header-notification.jpg" style="max-width:610px;" id="headerImage campaign-icon" mc:label="header_image" mc:edit="header_image" mc:allowtext />
                                                             </div>
                                                         </td>
                                                    
