This reverts commit 6b73a7b70325a458063ba8845f832ad57f5ffcac.

--- a/app/views/devise/mailer/reset_password_instructions.html.erb
+++ b/app/views/devise/mailer/reset_password_instructions.html.erb
@@ -1,11 +1,12 @@
-<h2 class="h2">Hola <%= @resource.name %>!</h2>
-<strong>Has solicitado reestablecer tu contraseña y puedes hacerlo por medio del link que aparece en este correo.</strong>
-Si tu no has solicitado el reestablecimiento de tu contraseña, porfavor ignora este correo.
-Tu contraseña no podrá ser cambiada a menos que tu ingreses al link y crees una nueva.
-<br>
+<p>Hola <%= @resource.first_name %>!</p>
+
+<p>Has solicitado reestablecer tu contraseña y puedes hacerlo por medio del link que aparece en este correo.</p>
 <%begin%>
 <%subdomain = @resource.networks.first.subdomain%>
 <%rescue%>
 <%subdomain = nil%>
 <%end%>
-<h1> <%= link_to 'Reestablecer Contraseña >>', edit_password_url(@resource, :reset_password_token => @resource.reset_password_token, :subdomain => subdomain) %></h1>
+<p><%= link_to 'Cambiar mi contraseña', edit_password_url(@resource, :reset_password_token => @resource.reset_password_token, :subdomain => subdomain) %></p>
+
+<p>Si tu no has solicitado el reestablecimiento de tu contraseña, porfavor ignora este correo.</p>
+<p>Tu contraseña no podrá ser cambiada a menos que tu ingreses al link y crees una nueva.</p>
