--- a/app/views/supervisor/students.html.erb
+++ b/app/views/supervisor/students.html.erb
@@ -35,8 +35,8 @@
                   <div class="span3-5">
                     <div class="user_options">
                       <div class="edit_role">
-                        <%= link_to 'Cambiar Rol', '#', :class=>"accept btn success small change_role_button" %>
-                        <%= link_to 'Eliminar', '#', :class=>"reject btn small danger" %>
+                        <%= link_to t('.change_role'), 'javascript:void(0)', :class=>"accept btn success small change_role_button" %>
+                        <%= link_to t('.destroy'), '#', :class=>"reject btn small danger" %>
                       </div>
                       <div id="edit_role_form" style="display:none;">
                         <%= form_for student do |f|%>
